--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,32 @@
 *.exe
 *.out
 *.app
+
+# For cmake
+*/build/*
+*/bin/*
+
+# For R
+.Rproj.user
+.Rhistory
+.RData
+.Ruserdata
+*.rds
+
+# For other data
+*.tar
+*.gz
+*.csv
+*.tgz
+*.zip
+*.txt
+*.xlsx
+*.fna
+*.fasta
+*.gff
+*.faa
+*.tsv
+*.xml
+*.binary
+*.raw
+*.DS_Store
