--- a/AAisoPeak/.vscode/settings.json
+++ b/AAisoPeak/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "*.tcc": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "unordered_map": "cpp",
+        "tuple": "cpp",
+        "vector": "cpp",
+        "ostream": "cpp"
     }
 }
