--- a/SiprosDevelop/working/test/CMakeLists.txt
+++ b/SiprosDevelop/working/test/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(CMAKE_C_COMPILER "/usr/bin/gcc")
-set(CMAKE_CXX_COMPILER "/usr/bin/g++")
+set(CMAKE_C_COMPILER "gcc")
+set(CMAKE_CXX_COMPILER "g++")
 
 add_executable(SiprosV3test ${SRC_LIST} ${PROJECT_SOURCE_DIR}/test/main.cpp)
 
